<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Stocks Panel Lite</string>
    <string name="action_settings" translatable="true">Settings</string>
    <string name="title_activity_settings" translatable="true">Settings</string>
    <string name="log_tag" translatable="false">VILLANUEVA</string>
    <string name="banner_1_main_ad_unit_id"     >ca-app-pub-2403313283268463/2040824439</string>
    <string name="banner_2_stock_ad_unit_id"    >ca-app-pub-2403313283268463/5773020039</string>
    <string name="banner_3_index_etf_ad_unit_id">ca-app-pub-2403313283268463/7947757231</string>
    <string name="pref_animation_key" translatable="false">animation</string>
    <string name="pref_animation_default" translatable="false">true</string>
    <string name="pref_animation_title" translatable="false">Show chart animation(Lollipop+)</string>
    <string name="pref_share_title" translatable="false">Share screenshot of:</string>
    <string name="pref_share_key" translatable="false">share</string>
    <string name="pref_share_default" translatable="false">chart</string>
    <string name="pref_share_screen" translatable="false">screen</string>
    <string name="pref_share_chart" translatable="false">chart</string>
    <string name="pref_share_value_change" translatable="false">value_change</string>
    <string name="pref_share_trading_info" translatable="false">trading_info</string>
    <string-array name="pref_share_entries" translatable="true">
        <item>entire screen</item>
        <item>only chart</item>
        <item>only value/change</item>
        <item>only stock trading info</item>
    </string-array>
    <string-array name="pref_share_values" translatable="false">
        <item>@string/pref_share_screen</item>
        <item>@string/pref_share_chart</item>
        <item>@string/pref_share_value_change</item>
        <item>@string/pref_share_trading_info</item>
    </string-array>
    <string name="pref_email_key" translatable="false">email</string>
    <string name="mailto" translatable="false">stockspanellite@gmail.com</string>
    <string name="subject" translatable="true">Comment about the app Stock Panel Lite</string>
    <string name="email_string">Tell us any recommendation or comment about the app</string>
    <string name="email_title">Send an e-mail to developer</string>
    <string name="app_play_store_address" translatable="false">https://play.google.com/store/apps/details?id=com.carlos.capstone</string>
    <string name="pref_share_app_key" translatable="false">share app</string>
    <string name="share_app_string">Tell a friend about us</string>
    <string name="share_app_title">Share this app with friends</string>
    <string name="pref_version_key" translatable="false">version</string>
    <string name="version_title">Version</string>
    <string name="pref_rate_key" translatable="false">rate</string>
    <string name="rate_app" translatable="true">If you liked the app, please rate it in Play Store</string>
    <string name="rate_app_title" translatable="true">Rate the app</string>
    <string name="pref_title_first_section" translatable="true">App</string>
    <string name="pref_title_second_section" translatable="true">Other</string>
    <string name="sync_account_type">captsone.carlos.com</string>
    <string name="content_authority">com.carlos.capstone</string>
    <string name="rss_america" translatable="false">https://uk.finance.yahoo.com/news/category-us/?format=rss</string>
    <string name="rss_europe" translatable="false">https://uk.finance.yahoo.com/news/category-europe/?format=rss</string>
    <string name="rss_asia" translatable="false">https://uk.finance.yahoo.com/news/category-asia/?format=rss</string>
    <string name="first_launch" translatable="false">first_launch</string>
    <string name="ticker_nasdaq" translatable="false">^IXIC</string>
    <string name="ticker_dow_jones" translatable="false">^DJI</string>
    <string name="ticker_sp500" translatable="false">^GSPC</string>
    <string name="ticker_ibex35" translatable="false">^IBEX</string>
    <string name="ticker_dax" translatable="false">^GDAXI</string>
    <string name="ticker_ftse" translatable="false">^FTSE</string>
    <string name="ticker_sse_composite" translatable="false">000001.SS</string>
    <string name="ticker_hsi" translatable="false">^HSI</string>
    <string name="ticker_nikkei" translatable="false">^N225</string>
    <string name="index_event" translatable="false">index_event</string>
    <string name="last_deleted_america" translatable="false">last_deleted_america</string>
    <string name="last_deleted_europe" translatable="false">last_deleted_europe</string>
    <string name="last_deleted_asia" translatable="false">last_deleted_asia</string>
    <string name="mask_date_with_time_zone" translatable="false">EEE, dd MMM yyyy kk:mm:ss ZZZ</string>
    <string name="last_sync_key" translatable="false">last_sync</string>
    <string name="needs_europe_sync_key" translatable="false">europe_needs_sync</string>
    <string name="needs_asia_sync_key" translatable="false">asia_needs_sync</string>
    <string name="comma_string" translatable="false">,</string>
    <string name="sa_helper_var" translatable="false">refresh</string>
    <string-array name="preLoadedQuotes">
        <item>GOOG</item>
        <item>AMZN</item>
        <item>^NDX</item>
        <item>ORCL</item>
    </string-array>
    <string name="two_pane_key" translatable="false">two_pane_key</string>
    <string name="index_ga_category" translatable="false">Index click</string>
    <string name="region_america" translatable="false">AMERICA</string>
    <string name="region_europe" translatable="false">EUROPE</string>
    <string name="region_asia" translatable="false">ASIA</string>
    <string name="region" translatable="false">region</string>
    <string name="sent_list" translatable="false">list</string>
    <string name="failure" translatable="false">failure</string>
    <string name="talback_fm_image" translatable="true">line chart of 3 indexes</string>
    <string name="talkback_fm_fab" translatable="true">add security</string>
    <string name="talkback_fm_admob" translatable="true">Advertisement</string>
    <string name="ga_fm_page_favorites" translatable="false">Page Favorites</string>
    <string name="ga_fm_page_america" translatable="false">Page America</string>
    <string name="ga_fm_page_europe" translatable="false">Page Europe</string>
    <string name="ga_fm_page_asia" translatable="false">Page Asia</string>
    <string name="fm_favorites">Watchlist</string>
    <string name="fm_america">America</string>
    <string name="fm_europe">Europe</string>
    <string name="fm_asia">Asia</string>
    <string name="news_ga_category" translatable="false">News click</string>
    <string name="date_mask_ga" translatable="false">yyyy/MM/dd kk:mm:ss</string>
    <string name="region_key" translatable="false">region</string>
    <string name="search_filter_key" translatable="false">search_filter</string>
    <string name="tab_summary_string" translatable="true">Summary</string>
    <string name="tab_componets_string" translatable="true">Components</string>
    <string name="index_tab_summary_intent_filter" translatable="false">summary_selected</string>
    <string name="index_tab_components_intent_filter" translatable="false">components_selected</string>
    <string name="index_ga_summary_screen_name" translatable="false">Page Index Summary</string>
    <string name="index_ga_components_screen_name" translatable="false">Page Index Components</string>
    <string name="format_change"><xliff:g id="change">%1$1.2f</xliff:g></string>
    <string name="format_change_percent">(<xliff:g id="change_percent">%1$1.2f</xliff:g>%%)</string>
    <string name="format_open">(<xliff:g id="change_percent">%1$1.2f</xliff:g>)</string>
    <string name="na_index_fund_name" translatable="true">Name:n/a</string>
    <string name="no_internet_conextion" translatable="true">No internet conexion</string>
    <string name="ticker_key" translatable="false">ticker_key</string>
    <string name="format_integer_value">###,###,###,###,###</string>
    <string name="format_decimal_value">##,###.##</string>
    <string name="ticker_bundle_key" translatable="false">ticker</string>
    <string name="qParam" translatable="false">use%20%22https%3A%2F%2Fraw.githubusercontent.com%2Fdavidayalas%2Fyql-stocks%2Fmaster%2Fstocks.xml%22%20as%20bolsa%3B%20select%20*%20from%20bolsa%20where%20url%3D%22http%3A%2F%2Fwww.eleconomista.es/indice/</string>
    <string name="triangle_up" translatable="false">\u25B2</string>
    <string name="triangle_down" translatable="false">\u25BC</string>
    <string name="triangle_equal" translatable="false">\u25BA</string>
    <string name="ticker_name_key" translatable="false">tickerIndex_key</string>
    <string name="search_filter_key_components" translatable="false">search_filter_key</string>
    <string name="manager_key" translatable="false">manager_key</string>
    <string name="ticker_query_key" translatable="false">ticker_query_key</string>
    <string name="percent_string" translatable="false">%</string>
    <string name="empty_string" translatable="false"></string>
    <string name="plus_string" translatable="false">+</string>
    <string name="minus_string" translatable="false">-</string>
    <string name="format_change_percent_without_parenthesis"><xliff:g id="change_percent">%1$1.2f</xliff:g>%%</string>
    <string name="locale_es" translatable="false">es</string>
    <string name="locale_ES" translatable="false">ES</string>
    <string name="volume_plus_point" translatable="true">Vol.</string>
    <string name="talkback_ia_ticker" translatable="true">ticker:</string>
    <string name="talkback_ia_decorative_element" translatable="true">decorative element</string>
    <string name="talkback_ia_index_name" translatable="true">index name:</string>
    <string name="talkback_ia_country" translatable="true">country:</string>
    <string name="talkback_ia_eye" translatable="true">image index shows components page</string>
    <string name="talkback_is_price" translatable="true">Last traded price:</string>
    <string name="talkback_is_change_percent" translatable="true">change percent:</string>
    <string name="talkback_change" translatable="true">change:</string>
    <string name="talkback_ra_title" translatable="true">news title:</string>
    <string name="talkback_ra_date" translatable="true">published date:</string>
    <string name="talkback_ra_content" translatable="true">news content:</string>
    <string name="talkback_ra_image" translatable="true">news image</string>
    <string name="bb_1d" translatable="true">1d</string>
    <string name="bb_1w" translatable="true">1w</string>
    <string name="bb_1m" translatable="true">1m</string>
    <string name="bb_6m" translatable="true">6m</string>
    <string name="bb_2y" translatable="true">2y</string>
    <string name="bb_5y" translatable="true">5y</string>
    <string name="bb_max" translatable="true">mx</string>
    <string name="bb_fit" translatable="true">fit</string>
    <string name="cim_var" translatable="true">var:</string>
    <string name="cim_value" translatable="true">value:</string>
    <string name="cim_time" translatable="true">time:</string>
    <string name="fist_day_high_text" translatable="true">day high</string>
    <string name="fist_day_low_text" translatable="true">day low</string>
    <string name="fist_year_high_text" translatable="true">year high</string>
    <string name="fist_year_low_text" translatable="true">year low</string>
    <string name="fist_volume" translatable="true">volume</string>
    <string name="wd_progressbar_text" translatable="true">Loading...</string>
    <string name="wd_empty_message" translatable="true">No stocks in list</string>
    <string name="wd_title" translatable="false">SPL</string>
</resources>