<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_title_first_section">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_animation_key"
            android:summary="enabled"
            android:title="@string/pref_animation_title" />
        <ListPreference
            android:defaultValue="@string/pref_share_default"
            android:entries="@array/pref_share_entries"
            android:entryValues="@array/pref_share_values"
            android:key="@string/pref_share_key"
            android:title="@string/pref_share_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_second_section">
        <Preference

            android:key="@string/pref_rate_key"
            android:summary="@string/rate_app"
            android:title="@string/rate_app_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.carlos.capstone" />
        </Preference>

        <Preference
            android:icon="@mipmap/ic_gmail"
            android:key="@string/pref_email_key"
            android:title="@string/email_title">

        </Preference>

        <Preference
            android:key="@string/pref_share_app_key"
            android:title="@string/share_app_title">


        </Preference>
        <Preference
            android:key="@string/pref_version_key"
            android:title="@string/version_title">

        </Preference>
    </PreferenceCategory>

</PreferenceScreen>