<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/cim_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/markerview_background"
    android:padding="@dimen/cim_padding"
     >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/cim_var"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/cim_text_size"
            android:textColor="@android:color/black"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/tvContent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/cim_text_size"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/cim_value"
            android:layout_width="0dp"
            android:layout_weight="1.42"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/cim_text_size"
            android:textColor="@android:color/black"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/tvContent1"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/cim_text_size"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/cim_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/cim_text_size"
            android:textColor="@android:color/black"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/tvContent2"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/cim_text_size"
            android:textColor="@android:color/black"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</LinearLayout>